# foxtrotgps

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.install  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
contrib/: Makefile.am  README.osb2foxtrot  README.osb2tango  convert2gpx  convert2gpx.1  convert2osm  convert2osm.1  georss2foxtrotgps-poi  georss2tangogps-poi  gpx2osm  osb2foxtrot  osb2tango.py  poi2osm
data/: Makefile.am  Makefile.in  apps_foxtrotgps.schemas.in  foxtrotgps.desktop  foxtrotgps.desktop.in  foxtrotgps.glade  foxtrotgps.glade.in  tangogps.desktop
doc/: Makefile.am  foxtrotgps.1  foxtrotgps.h2m  foxtrotgps.h2m.in  foxtrotgps.texi
pixmaps/: Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip  bg.gmo  bg.po  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  foxtrotgps.pot  fr.gmo  fr.po  hu.gmo  hu.po  it.po  ja.po  nl.gmo  nl.po  pl.po  pt_BR.po  ru.gmo  ru.po  sk.gmo  sk.po  sr.po  tangogps.pot
scripts/: Makefile.am  geocode
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  converter.c  converter.h  exif.c  exif.h  friends.c  friends.h  geo_photos.c  geo_photos.h  globals.c  globals.h  gps_functions.c  gps_functions.h  gpsdstart.sh  hrm_functions.c  hrm_functions.h  init.c  init.h  interface.c  interface.h  main.c  map_management.c  map_management.h  poi.c  poi.h  route.c  route.h  support.c  support.h  tile_management.c  tile_management.h  tracks.c  tracks.h  util.c  util.h  wp.c  wp.h
