dnl Process this file with autoconf to produce a configure script.

AC_INIT(foxtrotgps, 0.99.3, foss-gps@lists.osgeo.org)
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR(src/main.c)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC_C99
AC_HEADER_STDC

GETTEXT_PACKAGE=foxtrotgps
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])
AC_PROG_INTLTOOL([0.23])

dnl Languages which your application supports
ALL_LINGUAS="bg cs de es fi fr hu ru sk nl"
AM_GLIB_GNU_GETTEXT

AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK, [gtk+-2.0 gdk-2.0 gthread-2.0])
PKG_CHECK_MODULES(GCONF, [gconf-2.0])
PKG_CHECK_MODULES(LIBCURL, [libcurl])
PKG_CHECK_MODULES(SQLITE, [sqlite3])
PKG_CHECK_MODULES(LIBEXIF, [libexif])
PKG_CHECK_MODULES(LIBXML, [libxml-2.0])


AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
pixmaps/Makefile
data/Makefile
])
