## Process this file with automake to produce Makefile.in

tangogps_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

tangogps_pixmaps_DATA = \
	tangogps.png\
	tangogps-friend.png\
	tangogps-photo.png\
	tangogps-poi.png\
	tangogps-wp.png\
	tangogps-myposition.png

EXTRA_DIST = $(tangogps_pixmaps_DATA)
