## Process this file with automake to produce Makefile.in

foxtrotgps_pixmapsdir = $(datadir)/pixmaps

foxtrotgps_pixmaps_DATA = \
	foxtrotgps.png\
	foxtrotgps-friend.png\
	foxtrotgps-photo.png\
	foxtrotgps-poi.png\
	foxtrotgps-wp.png\
	foxtrotgps-myposition.png

EXTRA_DIST = $(foxtrotgps_pixmaps_DATA)
